# lotto

./: .clang-format  .clang-format.ignore  .clang-tidy  .cmake-format  .cmake-format.ignore  .gitattributes  .gitignore  .gitmodules  .yapf.ignore  AGENTS.md  CMakeLists.txt  QEMU_TODO.md  README.md  lotto  lotto-dice  lotto-run  lotto-stress
bench/lib/: CMakeLists.txt
include/: CMakeLists.txt
include/dice/: compiler.h  dispatch.h  interpose.h  mempool.h  now.h  rbtree.h  self.h  types.h
include/lotto/: await.h  await_while.h  check.h  drop.h  evec.h  events.h  fork.h  log.h  mutex.h  order.h  priority.h  qemu.h  region_atomic.h  region_preemption.h  rsrc_deadlock.h  velocity.h  yield.h
modules/: .gitignore  CMakeLists.txt  tikl.cfg.in
modules/autocept/: README.md
modules/debug/: CMakeLists.txt
modules/inactivity_timeout/: CMakeLists.txt
modules/leakcheck/: CMakeLists.txt
modules/malloc/: intercept.c  subscribe.c
modules/mutex/: CMakeLists.txt
modules/perf/: CMakeLists.txt
modules/qemu/: CMakeLists.txt  README.md
modules/qemu_gdb/: CMakeLists.txt
modules/qlotto/: CMakeLists.txt
modules/rusty/: CMakeLists.txt  Cargo.toml
plugins/: CMakeLists.txt
plugins/leakcheck/: CMakeLists.txt  leakcheck.c
plugins/priority/: handler.c  interceptor.c  state.c
plugins/rust/: CMakeLists.txt  Cargo.toml  README.md
plugins/uaf/: CMakeLists.txt
scripts/: CMakeLists.txt  addr2line.rkt  backtrace.rkt  benchmark-utils.sh  benchmark.sh  clang-format-modified.sh  clang-format.sh  dice  gen_ps_internal.sh  gen_ps_topics.sh  lotto-completion.bash  lotto-completion.fish  lotto-events  lotto-perf-pretty-print.py  lotto-run  mockoto-rkt-sanitize.sh  newline-format.sh  qemu-debug.sh  qemu-linux.sh  qlotto-defines.gdb  qlotto-linux.sh  qlotto-netbsd.sh  racket-format.sh  regression.sh  run-racket  timedrun.sh  update-bench-index.sh
scripts/qdlotto/: 01-init-qdlotto.sh  02-install-alpine.sh  03-prepare-alpine-docker-load.sh  04-docker-install-load.sh  99-restore-clean-alpine-install.sh  qdlotto.env
scripts/smolbsd/: get_pkgsrc.sh  get_results.sh  get_smolBSD.sh
src/: CMakeLists.txt
src/base/: CMakeLists.txt  address_bdd.c  bag.c  callrec.c  cappt.c  category.c  envvar.c  flags.c  log.c  map.c  marshable.c  memory_map.c  plan.c  reason.c  record.c  record_granularity.c  slot.c  stable_address.c  strategy.c  string.c  string_hash_table.c  symlist.c  tidbag.c  tidmap.c  tidset.c  topic.c  trace_chunked.c  trace_file.c  trace_flat.c  trace_impl.c  vec.c
src/brokers/: CMakeLists.txt  catmgr.c  catmgr_stub.c  pubsub.c  pubsub_stub.c  statemgr.c  statemgr_stub.c
src/cli/: CMakeLists.txt  args.c  exec.c  exec_info.c  explore.c  files.c  flagmgr.c  lib.c  log_utils.c  main.c  module.c  preload.c  scheme.c  scheme.h  subcmd.c  trace_utils.c  utils.c
src/crep/: CMakeLists.txt  crep.c  file.c  poll.c  pthread.c  random.c  read_write.c  time.c  warn_list.S
src/dice/: box.c  dispatch.c.in  dispatch_0.c  dispatch_2.c  dispatch_chain.c.in  loader.c  mempool.c  pubsub.c  rbtree.c  registry.c
src/driver/: CMakeLists.txt  args.c  exec.c  exec_info.c  files.c  flagmgr.c  main.c  module.c  preload.c  subcmd.c  trace_utils.c  utils.c
src/engine/: CMakeLists.txt  catmgr.c  clock.c  creation.c  dispatcher.c  engine.c  flags.c  module.c  plan.c  prng.c  prng_stub.c  recorder.c  sequencer.c  state.c  statemgr.c  task.c
src/flotto/: CMakeLists.txt  engine.c
src/include/: CMakeLists.txt  crep.h
src/interceptors/: CMakeLists.txt  intercept_aarch64.S  intercept_disable.c  intercept_evec.c  intercept_list.S  intercept_malloc.c  intercept_mutex.c  intercept_order.c  intercept_posix.c  intercept_pthread.c  intercept_pthread_create.c  intercept_pthread_mutex.c  intercept_pthread_setspecific.c  intercept_region_rogue.c  intercept_rsrc_deadlock.c  intercept_task_velocity.c
src/mod/: CMakeLists.txt  annotate_rwlock.c  cxa.c  defs.h  logger.c  memcpy.c  mman.c  pthread_create.c  self-box.c  sem.c  stacktrace.c  tsan.c  wrap_memset.c
src/perf/: perf.c
src/plotto/: CMakeLists.txt  intercept_aarch64.S  intercept_evec.c  intercept_generic.S  intercept_list.S  intercept_log.c  intercept_malloc.c  intercept_mutex.c  intercept_order.c  intercept_posix.c  intercept_pthread.c  intercept_region_preemption.c  intercept_trace_pc.c  intercept_tsan.c  intercept_x86_64.S  trace_pc.c
src/qlotto/: qlotto.c
src/runtime/: CMakeLists.txt  await_stubs.c  futex.c  handler_config.c  ingress.c  intercept_evec.c  intercept_malloc.c  intercept_mutex.c  intercept_order.c  intercept_posix.c  intercept_pthread.c  intercept_rsrc_deadlock.c  intercept_stub.c  intercept_tsan.c  interceptor.c  interceptor.h  interceptor_internal.h  malloc.c  mediator.c  memmgr_dice.c  module.c  rsrc_deadlock_stub.c  runtime.c  sighandler.c  sighandler.h  subs_adapter.c  subs_pthread.c  subscribe.c  switcher.c  switcher_stub.c  thread_id.c
src/states/: CMakeLists.txt  module.c  prng.c  sequencer.c
src/subscribers/: CMakeLists.txt
src/sys/: CMakeLists.txt  abort.c  common.c  libc_wrappers.c  logger.c  logger_block.c  logger_block_stub.c  memmgr.c  memmgr_libc.c  memory.c  mempool.c  modules.c  plugin.c  stdio.c  stream_chunked_file.c  stream_chunked_impl.c  stream_ffile.c  stream_file.c  stream_impl.c  string.c
test/: CMakeLists.txt  malloc_free_test.c  pthread_create_detach.c  pthread_create_exit.c  pthread_exit_window.c  pthread_reuse.c
test/checkers/: malloc_free_check.c  mock_checker.c  trace_checker.c  trace_checker.h
test/conformance/: CMakeLists.txt
test/cxx/: CMakeLists.txt  tls_destructor.cpp
test/integration/: .gitignore  0000-handler-called.c  0000-pthread_create.c  0001-main-segfault.c  0001-mutex-overwrite-var.c  0001-thread-segfault.c  0001-thread-sigabrt.c  0001-thread-sigint.c  0002-handler-random-sigabrt.c  0002-handler-sigabrt.c  0002-mutex-trylock.c  0002-producer-consumer.c  0003-await-increment.c  0003-malloc-random-sigabort.c  0003-malloc-segfault.c  0003-malloc-sigabort.c  0004-mutex-deadlock.c  0005-atomic-message-passing.c  0005-malloc-called.c  0006-mutex-trylock.c  0008-double_free.c  (+156 more)
(+1772 files in other folders)
