include_directories(${CMAKE_BINARY_DIR}/generated)
include(${PROJECT_SOURCE_DIR}/cmake/lit.cmake)
include_directories(${PROJECT_SOURCE_DIR}/src/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/rusty/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/evec/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/fork/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/mutex/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/order/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/priority/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/task_velocity/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/yield/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/region_preemption/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/deadlock/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/disable/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/rogue/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/time/include)
include_directories(${PROJECT_SOURCE_DIR}/modules/qemu/include)
enable_language(CXX)
add_custom_target(tikl-test)
add_subdirectory(integration)
# add_subdirectory(pthread)
add_subdirectory(racket)
# add_subdirectory(tsan)
add_subdirectory(unit)
